[package]
name = "isr-cache"
version = "0.3.0"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Cache for ISR"
keywords = [
    "isr",
]

[dependencies]
bincode = { workspace = true, features = ["serde"], optional = true }
memmap2 = { workspace = true }
rmp-serde = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

isr-core = { workspace = true }
isr-pdb = { workspace = true, optional = true }
isr-dwarf = { workspace = true, optional = true }
isr-dl-pdb = { workspace = true, optional = true }
isr-dl-linux = { workspace = true, optional = true }

[dev-dependencies]
# isr = { path = "../..", version = "0.2.0" }

[features]
default = ["pdb", "linux", "codec-bincode", "codec-json", "codec-msgpack"]

pdb = ["isr-dl-pdb", "isr-pdb"]
linux = ["isr-dl-linux", "isr-dwarf"]
codec-bincode = ["bincode"]
codec-json = ["serde_json"]
codec-msgpack = ["rmp-serde"]
