[package]
name = "isr-cache"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Cache for ISR"
keywords = [
    "isr",
]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
memmap2 = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

isr-core = { workspace = true }
isr-pdb = { workspace = true, optional = true }
isr-dwarf = { workspace = true, optional = true }
isr-dl = { workspace = true }
isr-dl-linux = { workspace = true, optional = true }
isr-dl-windows = { workspace = true, optional = true }

[dev-dependencies]
# isr = { path = "../..", version = { workspace = true } }

[features]
default = []

linux = ["isr-dl-linux", "isr-dwarf"]
windows = ["isr-dl-windows", "isr-pdb"]
json = ["serde", "serde_json", "isr-core/serde"]
