[package]
name = "isr-core"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Core ISR library"
keywords = [
    "isr",
]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
indexmap = { workspace = true }
rkyv = { workspace = true, features = ["indexmap-2"] }
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = []

serde = ["dep:serde", "indexmap/serde"]
