[package]
name = "isr-dl-pdb"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "PDB downloader for ISR"
keywords = [
    "isr",
]

[dependencies]
object = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
thiserror = { workspace = true }
tracing = { workspace = true }
