[package]
name = "isr-dl"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Common download infrastructure for ISR"
keywords = [
    "isr",
]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
url = { workspace = true }
