[package]
name = "isr-dwarf"
version = "0.2.0"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "DWARF parser for ISR"
keywords = [
    "isr",
]

[dependencies]
gimli = { workspace = true }
indexmap = { workspace = true }
memmap2 = { workspace = true }
object = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

isr-core = { workspace = true, version = "0.2.0" }
