[package]
name = "isr-dwarf"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "DWARF parser for ISR"
keywords = [
    "isr",
]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
gimli = { workspace = true }
indexmap = { workspace = true }
memmap2 = { workspace = true }
object = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

isr-core = { workspace = true }
