[package]
name = "isr-macros"
version = "0.3.0"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Macros for ISR"
keywords = [
    "isr",
]

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smallvec = { workspace = true , features = ["serde", "union"] }
thiserror = { workspace = true }

isr-core = { workspace = true }

#[dev-dependencies]
#isr = { path = "../..", version = "0.2.0" }
