[package]
name = "isr-macros"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Macros for ISR"
keywords = [
    "isr",
]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

isr-core = { workspace = true }

# For testing.
rkyv = { workspace = true, features = ["indexmap-2"] }

[dev-dependencies]
isr = { path = "../..", features = ["cache", "dl-windows"] }
