[package]
name = "isr-pdb"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "PDB parser for ISR"
keywords = [
    "isr",
]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
indexmap = { workspace = true }
pdb = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

isr-core = { workspace = true }
